env/code_53f04e391f5c2/stderr.txt
  File "main.py", line 6
    m = (int)ss[1]
              ^
SyntaxError: invalid syntax
